--- a/app/design/adminhtml/default/default/layout/vendor.xml
+++ b/app/design/adminhtml/default/default/layout/vendor.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0"?>
-<layout version="0.1.0">
- <vendor_adminhtml_vedor_index>
- <reference name="content">
- <block type="vendor/adminhtml_vendor" name="vendor" />
- </reference>
- </vendor_adminhtml_vendor_index>
+<layout>
+    <vendor_adminhtml_vendor_attribute_edit>
+        <reference name="left">
+            <block type="vendor/adminhtml_vendor_attribute_edit_tabs" name="attribute_tabs"/>
+        </reference>
+        <reference name="content">
+            <block type="vendor/adminhtml_vendor_attribute_edit" name="attribute_edit"/>
+        </reference>
+        <reference name="js">
+            <block type="adminhtml/template" name="attribute_edit_js" template="vendor/attribute/js.phtml"></block>
+        </reference>
+    </vendor_adminhtml_vendor_attribute_edit>
+
 </layout>
